--- a/CM004sample.Rmd
+++ b/CM004sample.Rmd
@@ -6,27 +6,24 @@ output:
   html_document: 
     keep_md: yes
 ---
+This is a line of text.
+# level one header
+## This is my header
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+- bullet 1
+- bullet 2
+# command option i / insert r
+```{r}
+x <- rnorm(100)
+y <- rnorm(100)
+plot (x,y)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r this is the third chunk}
+summary(x)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```
+summary(x)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
